syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/PlatosCodes/desserted/backend/pb";

message Game {
    int64 game_id = 1;
    string status = 2;
    int64 created_by = 3;
    int32 number_of_players = 4;
    int32 current_turn = 5;
    int32 current_player_number = 6;
    google.protobuf.Timestamp start_time = 7;
    google.protobuf.Timestamp  end_time = 8;
}